Beginning Jquery Integration

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,6 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
   <script src="https://use.typekit.net/frh7reh.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="{{site.baseurl}}/js/jquery.steps.min.js"></script>
 </head>
