--- a/_includes/card.html
+++ b/_includes/card.html
@@ -3,18 +3,142 @@
     <svg class="block fit width-100" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 600 200" enable-background="new 0 0 600 200" xml:space="preserve">
     	<path fill-rule="evenodd" clip-rule="evenodd" fill="#F1F2DA" d="M0,0v200h600V0H0z M300,130c-16.568,0-30-13.432-30-30
     		s13.432-30,30-30s30,13.432,30,30S316.568,130,300,130z"/>
-        <path fill-rule="evenodd" clip-rule="evenodd" stroke="rgba(0,0,0,.25)" fill="#43362D" d="M300,60c-22.091,0-40,17.908-40,40s17.909,40,40,40
-          s40-17.908,40-40S322.091,60,300,60z M300,115c-8.284,0-15-6.716-15-15s6.716-15,15-15s15,6.716,15,15S308.284,115,300,115z"/>
+      <path fill-rule="evenodd" clip-rule="evenodd" stroke="rgba(0,0,0,.25)" fill="#43362D" d="M300,60c-22.091,0-40,17.908-40,40s17.909,40,40,40
+        s40-17.908,40-40S322.091,60,300,60z M300,115c-8.284,0-15-6.716-15-15s6.716-15,15-15s15,6.716,15,15S308.284,115,300,115z"/>
     </svg>
     <!-- <svg class="block absolute z2 top-0 fit width-100" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 600 200" enable-background="new 0 0 600 200" xml:space="preserve">
 
 
     </svg> -->
   </div>
-  <div class="absolute top-0 width-100 cf p-m">
-    <div class="col col-4 p-m">
-        <svg>
-          Camp Logo
+  <div class="absolute top-0 width-100 cf px-m">
+    <div class="col col-4">
+        <svg class="block width-100" x="0px" y="0px" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
+          <g>
+          	<path fill="#7C8372" d="M60.166,73.288l-0.969-2.838l1.26-0.431c1.941-0.662,2.729-1.92,2.039-3.94
+          		c-0.67-1.964-2.232-2.382-4.072-1.754l-3.406,1.163l2.922,8.56L60.166,73.288z M58.231,66.394c0.862-0.295,1.604-0.535,1.973,0.543
+          		c0.356,1.045-0.438,1.315-1.244,1.591l-0.375,0.128l-0.729-2.134L58.231,66.394z"/>
+          	<path fill="#7C8372" d="M45.695,128.327c0-0.318,0.211-0.613,0.611-0.613c0.401,0,0.676,0.316,1.373,0.93l0.696-0.254l-0.76-1.922
+          		h-0.634l-0.38,0.275c-0.169-0.021-0.316-0.043-0.485-0.043c-0.908,0-1.478,0.549-1.478,1.5c0,1.055,0.95,2.279,2.406,5.023
+          		c0.992,1.795,2.048,3.947,2.048,5.785c0,1.182-0.844,2.133-1.963,2.133c-1.33,0-1.795-0.971-2.175-1.816l-0.676,0.254l0.296,2.322
+          		h0.549l0.38-0.232c0.401,0.254,1.056,0.486,1.626,0.486c1.604,0,3.019-1.184,3.019-3.314c0-2.049-1.245-4.477-2.259-6.312
+          		C46.582,130.12,45.695,129.065,45.695,128.327z"/>
+          	<path fill="#7C8372" d="M44.585,75.236c-1.401-2.126-4.225-2.637-6.331-1.249l-2.787,1.837l4.982,7.559l2.787-1.838
+          		C45.332,80.164,45.986,77.361,44.585,75.236z M41.759,80.133l-0.441,0.291l-2.788-4.23l0.461-0.305
+          		c1.263-0.833,2.658-0.659,3.55,0.695C43.512,78.057,42.932,79.359,41.759,80.133z"/>
+          	<polygon fill="#7C8372" points="54.578,75.42 53.735,73.617 51.204,74.8 50.543,73.388 52.944,72.265 52.101,70.462 49.699,71.584
+          		49.059,70.216 51.59,69.032 50.747,67.229 46.086,69.409 49.917,77.6 	"/>
+          	<polygon fill="#7C8372" points="126.093,69.558 128.39,70.06 129.896,63.169 131.795,63.585 132.22,61.64 126.126,60.307
+          		125.701,62.252 127.6,62.667 	"/>
+          	<path fill="#7C8372" d="M118.263,66.439c-0.797-0.111-1.428-0.623-1.939-1.216l-1.261,1.738c0.825,0.77,1.878,1.305,3.007,1.463
+          		c0.903,0.126,1.877,0.008,2.662-0.488c0.798-0.506,1.141-1.392,1.265-2.283c0.203-1.45-0.672-2.215-1.868-2.758l-0.569-0.262
+          		c-0.386-0.188-0.987-0.478-0.915-1c0.07-0.5,0.676-0.669,1.104-0.609c0.57,0.08,1.084,0.394,1.463,0.811l1.18-1.677
+          		c-0.733-0.563-1.799-1.004-2.703-1.13c-1.794-0.251-3.256,0.756-3.511,2.575c-0.243,1.735,0.667,2.25,2.071,2.871
+          		c0.479,0.212,1.362,0.566,1.271,1.22C119.43,66.324,118.81,66.516,118.263,66.439z"/>
+          	<path fill="#7C8372" d="M60.347,127.757c0.211,0.043,0.57,0.043,0.57,0.295c0,0.295-0.211,1.162-0.359,1.836l-2.132,9.986h-0.042
+          		l-1.372-5.572l1.583-5.807c0.169-0.654,0.232-0.654,0.696-0.738v-0.803H56.99v0.803c0.232,0.043,0.591,0.105,0.591,0.359
+          		c0,0.273-0.211,0.928-0.4,1.688l-0.655,2.746h-0.042l-0.654-2.746c-0.19-0.76-0.401-1.414-0.401-1.688
+          		c0-0.254,0.359-0.316,0.591-0.359v-0.803h-2.301v0.803c0.465,0.084,0.527,0.084,0.697,0.738l1.583,5.807l-1.372,5.572h-0.043
+          		l-2.132-9.986c-0.147-0.674-0.358-1.541-0.358-1.836c0-0.252,0.358-0.252,0.569-0.295v-0.803h-2.47v0.803
+          		c0.718,0.02,0.76,0.189,0.95,1.014l2.279,10.111c0.169,0.697,0.423,1.732,0.423,1.943c0,0.232-0.232,0.232-0.507,0.273v0.803h2.471
+          		v-0.803c-0.212-0.021-0.507-0.021-0.507-0.23c0-0.275,0.295-1.332,0.464-1.986l0.718-2.871h0.042l0.718,2.871
+          		c0.169,0.654,0.465,1.711,0.465,1.986c0,0.209-0.296,0.209-0.507,0.23v0.803h2.47v-0.803c-0.273-0.041-0.507-0.041-0.507-0.273
+          		c0-0.211,0.254-1.246,0.423-1.943l2.28-10.111c0.19-0.846,0.211-0.971,0.95-1.014v-0.803h-2.471V127.757z"/>
+          	<path fill="#7C8372" d="M137.464,72.879c2.762,0.901,5.399-0.41,6.309-3.195c0.848-2.603-0.839-5.173-3.315-5.981
+          		c-2.477-0.808-5.354,0.274-6.204,2.876C133.345,69.364,134.702,71.978,137.464,72.879z M136.577,67.35
+          		c0.388-1.188,1.837-1.914,3.172-1.479c1.336,0.436,2.078,1.877,1.691,3.064c-0.484,1.483-1.934,2.211-3.27,1.774
+          		C136.835,70.275,136.094,68.833,136.577,67.35z"/>
+          	<path fill="#7C8372" d="M91.916,67.484c2.899-0.17,4.875-2.353,4.703-5.275c-0.16-2.731-2.668-4.507-5.267-4.354
+          		c-2.6,0.152-4.883,2.209-4.723,4.939C86.8,65.716,89.018,67.654,91.916,67.484z M91.485,60.129
+          		c1.401-0.082,2.618,0.988,2.691,2.234c0.091,1.557-0.992,2.763-2.394,2.845s-2.618-0.988-2.709-2.546
+          		C89,61.417,90.083,60.211,91.485,60.129z"/>
+          	<path fill="#7C8372" d="M76.079,69.338c0.767-0.144,1.264-0.883,1.123-1.638c-0.143-0.767-0.871-1.266-1.637-1.123
+          		c-0.767,0.144-1.266,0.871-1.123,1.638C74.582,68.97,75.312,69.481,76.079,69.338z"/>
+          	<polygon fill="#7C8372" points="102.632,63.426 105.21,63.478 105.251,61.488 102.672,61.435 102.703,59.924 105.546,59.982
+          		105.587,57.991 100.393,57.885 100.209,66.928 102.56,66.976 	"/>
+          	<polygon fill="#7C8372" points="67.13,63.83 68.799,70.685 71.083,70.128 69.415,63.274 71.303,62.814 70.833,60.878
+          		64.771,62.355 65.242,64.29 	"/>
+          	<path fill="#7C8372" d="M85.863,127.626c0.865,0.084,0.865,0.211,0.865,0.824v11.695c0,0.611,0,0.719-0.865,0.824v0.801h2.786
+          		v-0.801c-0.865-0.105-0.865-0.254-0.865-0.824V128.45c0-0.613,0-0.74,0.865-0.824v-0.803h-2.786V127.626z"/>
+          	<path fill="#7C8372" d="M146.395,140.843h-2.175v-10.346h2.026c0.592,0,0.676,0.275,0.739,0.592h0.634v-2.111h-0.634
+          		c-0.021,0.359-0.084,0.592-0.781,0.592h-1.984v-1.816h1.562c0.696,0,0.865,0.273,1.203,0.549l0.634-0.359l-0.761-1.436
+          		c-0.76,0.316-1.583,0.316-2.089,0.316h-2.556v0.803c0.95,0.084,0.95,0.211,0.95,0.824v11.695c0,0.611,0,0.719-0.95,0.824v0.801
+          		h2.703c0.38,0,0.887,0,1.393,0.043c0.528,0.043,1.034,0.105,1.437,0.211l0.76-1.646l-0.634-0.422
+          		C147.514,140.399,147.365,140.843,146.395,140.843z"/>
+          	<path fill="#7C8372" d="M137.78,127.626c0.866,0.084,0.866,0.211,0.866,0.824v11.695c0,0.611,0,0.719-0.866,0.824v0.801h2.787
+          		v-0.801c-0.865-0.105-0.865-0.254-0.865-0.824V128.45c0-0.613,0-0.74,0.865-0.824v-0.803h-2.787V127.626z"/>
+          	<path fill="#7C8372" d="M144.805,120.69c0,0,2.933,1.133,1.633-2.1c0,0,0.4-1.066-1.066-2.732
+          		c-1.466-1.666-3.332-3.732-3.332-3.732s0.699-0.699-3.232-3.131c0,0-3.371-2.322-7.087-4.483c-0.162-0.076-0.329-0.155-0.508-0.242
+          		c-7.343-3.548-15.365-2.874-15.365-2.874l0.042-0.057c-0.045,0.016-0.075,0.027-0.093,0.036c-0.291-0.123-1.921-0.819-3.281-1.545
+          		c0,0-4.499-1.6-7.198-1.766c0,0-3.836-0.852-7.847-0.77c-5.522,0.278-6.099,0.115-10.935-0.451c0,0-3.646-0.013-5.245-0.779
+          		c0,0-1.466-0.533-1.999-1.732s-0.899-3.065-3.466-5.465c0,0-1.498-1.697-1.565-3.33c0,0-0.3-1.933-0.633-0.233
+          		c0,0-0.768,2.197-0.001,3.862L73.393,89.3c0,0-1.866-1.732-2.065-2.065c0,0-0.667-0.833-0.634,0.267s-0.166,0.933,0.301,2.532
+          		c0,0,0.266,0.366,0,0.866c0,0-2.431,1.551-3.234,3.633c-0.053,0.047-0.11,0.102-0.172,0.166c-1.379,1.432-2.92,2.013-3.771,2.24
+          		c-0.127,0.02-0.263,0.051-0.402,0.095c-0.161,0.031-0.255,0.042-0.255,0.042c-0.542,0.077-1.123,0.697-1.006,1.606
+          		c0.115,0.909,4.761,1.259,4.761,1.259s0-0.004,0.001-0.005c1.011,0.22,2.299,0.411,3.412,0.295c0,0,1.666-0.101,2.033,0.3
+          		c0,0,2.499,1.766,2.832,2.332s0.866,1.033,1.199,1.366c0.334,0.333,1.1,1.866,1.366,2.667c0.267,0.799,1.634,2.799,2.833,3.064
+          		c0,0-6.365,7.766-7.498,8.432c0,0-1.033,1.066-2.299,1.199c-1.267,0.135-2.066,0.199-2.066,0.199s-0.982,0.064-1.633,0.801
+          		c0,0-1,0.334-0.833,0.9c0,0-0.667,0.465-0.133,1.066l4.865-0.102c0,0,1.266,0.068,1.065-0.998c0,0,0.667-0.068,0.6-0.834
+          		l0.974,0.189c0,0,0.519-0.1,0.708-0.322c0.101-0.066,0.272-0.18,0.552-0.367c1.1-0.732,5.231-3.133,5.231-3.133l2.732-1.766
+          		c0,0,1.5-0.367,1.833-1.332l0.366,0.066l0.033,2.766c0,0-0.565,1.299,0.2,2.166c0,0,1.6,0.299,4.532,2.432c0,0,0.533,0.5,0.533,0.9
+          		c0,0,0.166,0.4,0.933,0.232l1.833,0.367c0,0,0.562,0.574,1.466-0.732c0.51-0.736,0.516-0.762,0.513-0.762
+          		c0.008-0.004,0.546-0.34-0.513-0.605c0,0-2.499-1.199-3.998-0.934c0,0-1.667-1.166-1.933-1.732c0,0-0.101-0.666-0.767-0.998
+          		c0,0,3.132-2.967,2.532-5.434c0,0,3.065-0.566,5.132-0.232c2.065,0.334,2.713,0.131,2.713,0.131s2.148,0,2.507-0.238
+          		c0,0,2.444-0.125,4.911-1.025c0,0,0.699,1.732,0.866,3c0,0,0.066,1.865,1.3,2.465c0,0-4.065,1.367-4.565,2.166
+          		c0,0-3.565,1.117-5.099,2.184c0,0-0.5-0.25-1.366,0.682l-0.451,0.646c0,0-0.516,0.354,0.484,0.621c0,0,0.795,0.32,1.434,0.422
+          		c0,0,3.265,0.41,2.965-1.156c0,0,0.101-1.033,4.433-1.998c4.332-0.967,4.531-0.934,4.531-0.934s1.833,0.332,1.467-1.834
+          		c-0.14-0.826-0.207-1.176-0.237-1.293l-0.029-2.238c0,0,0.732-0.033,1.232,0.6c0,0,2.499,1.566,5.499,1.266h0.6l1.633,4.898
+          		c0,0,0.3,2.5,4.266,3.967c0,0,3.032,1.633,2.666,0.367c-0.367-1.268-0.567-1.635-0.567-1.635s0.122-0.951-0.433-1.1
+          		c-1.54-0.412-3.766-1.566-3.766-1.566s-0.95-0.133-0.667-2.564c0.317-2.725-0.066-3.533-0.066-3.533s0.233-1.465-1.499-1.666
+          		c0,0-1.633-1.365-1.867-1.732c-0.232-0.367-0.499-1.4-1.299-2.166c0,0,6.664,4.332,9.73,4.166l-0.134-0.334
+          		c0,0,3.233,0.701,4.898,1.699c1.667,1,2.767,1.766,5.198,2c0,0,1.866,0.799,2.4,1.299
+          		C139.772,117.458,141.839,120.024,144.805,120.69z"/>
+          	<path fill="#7C8372" d="M134.951,138.942c-0.528-1.963-0.781-6.672-0.781-8.74c0.992-0.275,1.225-0.992,1.225-1.646
+          		c0-0.992-0.549-1.732-2.386-1.732h-3.843v0.803c0.866,0.084,0.866,0.211,0.866,0.824v11.695c0,0.611,0,0.719-0.866,0.824v0.801
+          		h2.787v-0.801c-0.865-0.105-0.865-0.254-0.865-0.824v-9.881h2.025c0,2.111,0.19,6.65,0.866,9.184
+          		c0.274,1.035,0.549,1.711,0.823,2.322h1.604v-0.801C135.689,140.864,135.331,140.399,134.951,138.942z M133.009,129.337h-1.921
+          		v-1.584h1.921c0.696,0,1.267,0.232,1.267,0.781C134.275,129.146,133.853,129.337,133.009,129.337z"/>
+          	<path fill="#7C8372" d="M124.923,126.823c-0.782,0-1.584-0.041-2.365-0.125l-0.696,1.814l0.675,0.232
+          		c0.465-0.992,1.014-0.992,1.858-0.992v12.393c0,0.611,0,0.74-0.865,0.824v0.801h2.786v-0.801c-0.865-0.084-0.865-0.213-0.865-0.824
+          		v-12.393c0.845,0,1.394,0,1.857,0.992l0.676-0.232l-0.696-1.814C126.506,126.761,125.725,126.823,124.923,126.823z"/>
+          	<polygon fill="#7C8372" points="152.852,79.086 151.407,73.087 156.519,70.811 153.896,69.536 149.708,71.646 149.687,71.636
+          		151.318,68.281 149.204,67.252 145.246,75.386 147.36,76.416 149.077,72.887 149.099,72.898 150.111,77.754 	"/>
+          	<polygon fill="#7C8372" points="163.4,77.699 164.532,76.061 160.298,73.135 155.155,80.578 159.39,83.504 160.522,81.865
+          		158.222,80.277 159.108,78.994 161.29,80.5 162.423,78.861 160.241,77.354 161.101,76.111 	"/>
+          	<path fill="#7C8372" d="M150.659,128.196c0-0.316,0.212-0.611,0.612-0.611s0.676,0.316,1.373,0.928l0.696-0.254l-0.76-1.92h-0.634
+          		l-0.38,0.273c-0.169-0.021-0.317-0.041-0.485-0.041c-0.908,0-1.478,0.549-1.478,1.498c0,1.057,0.949,2.281,2.406,5.025
+          		c0.992,1.795,2.048,3.947,2.048,5.785c0,1.182-0.845,2.131-1.963,2.131c-1.33,0-1.795-0.971-2.176-1.816l-0.675,0.254l0.295,2.322
+          		h0.549l0.381-0.232c0.401,0.254,1.056,0.486,1.626,0.486c1.604,0,3.019-1.182,3.019-3.314c0-2.049-1.245-4.475-2.259-6.312
+          		C151.546,129.991,150.659,128.937,150.659,128.196z"/>
+          	<path fill="#7C8372" d="M94.941,127.626c0.865,0.086,0.865,0.211,0.865,0.824v1.076l-3.441-1.922
+          		c-0.316-0.168-0.358-0.211-0.358-0.568v-0.213h-1.922v0.803c0.866,0.086,0.866,0.211,0.866,0.824v11.695
+          		c0,0.611,0,0.719-0.866,0.824v0.801h2.787v-0.801c-0.865-0.105-0.865-0.254-0.865-0.824V128.45l3.8,2.152v9.543
+          		c0,0.611,0,0.719-0.865,0.824v0.801h2.786v-0.801c-0.865-0.105-0.865-0.254-0.865-0.824V128.45c0-0.613,0-0.738,0.865-0.824v-0.803
+          		h-2.786V127.626z"/>
+          	<path fill="#7C8372" d="M117.11,128.196c0-0.316,0.211-0.611,0.612-0.611c0.4,0,0.676,0.316,1.372,0.928l0.697-0.254l-0.76-1.92
+          		h-0.634l-0.38,0.273c-0.169-0.021-0.317-0.041-0.485-0.041c-0.908,0-1.478,0.549-1.478,1.498c0,1.057,0.949,2.281,2.405,5.025
+          		c0.993,1.795,2.049,3.947,2.049,5.785c0,1.182-0.845,2.131-1.963,2.131c-1.331,0-1.795-0.971-2.176-1.816l-0.675,0.254l0.295,2.322
+          		h0.55l0.38-0.232c0.4,0.254,1.055,0.486,1.626,0.486c1.604,0,3.019-1.182,3.019-3.314c0-2.049-1.245-4.475-2.259-6.312
+          		C117.997,129.991,117.11,128.937,117.11,128.196z"/>
+          	<path fill="#7C8372" d="M82.526,139.978c-0.485,0-0.696,0.568-0.696,1.055c0,0.465,0.232,0.992,0.696,0.992
+          		c0.465,0,0.697-0.527,0.697-0.992C83.224,140.546,83.013,139.978,82.526,139.978z"/>
+          	<path fill="#7C8372" d="M72.065,127.884c0.697,0,0.865,0.273,1.203,0.549l0.634-0.359l-0.76-1.436
+          		c-0.761,0.316-1.584,0.316-2.091,0.316h-2.555v0.803c0.95,0.084,0.95,0.211,0.95,0.822v11.697c0,0.611,0,0.738-0.865,0.822v0.803
+          		h2.787v-0.803c-0.866-0.084-0.866-0.189-0.866-0.822v-9.648h2.026c0.592,0,0.676,0.273,0.739,0.592h0.634v-2.113h-0.634
+          		c-0.021,0.359-0.084,0.594-0.781,0.594h-1.984v-1.816H72.065z"/>
+          	<path fill="#7C8372" d="M77.943,126.954c-0.782,0-1.584-0.043-2.365-0.127l-0.696,1.816l0.676,0.232
+          		c0.465-0.992,1.013-0.992,1.857-0.992v12.393c0,0.611,0,0.738-0.865,0.822v0.803h2.787v-0.803
+          		c-0.866-0.084-0.866-0.211-0.866-0.822v-12.393c0.845,0,1.394,0,1.858,0.992l0.676-0.232l-0.697-1.816
+          		C79.526,126.89,78.745,126.954,77.943,126.954z"/>
+          	<path fill="#7C8372" d="M112.021,127.626c0.824,0.084,0.824,0.211,0.824,0.824v9.689c0,1.9-0.381,2.871-1.942,2.871
+          		c-1.521,0-1.9-0.971-1.9-2.871v-9.689c0-0.613,0-0.74,0.823-0.824v-0.803h-2.682v0.803c0.803,0.084,0.803,0.211,0.803,0.824v9.605
+          		c0,2.49,0.527,3.969,2.914,3.969c2.49,0,3.039-1.479,3.039-3.969v-9.605c0-0.613,0-0.74,0.803-0.824v-0.803h-2.682V127.626z"/>
+          	<path fill="#7C8372" d="M64.106,127.757c0.865,0.084,0.865,0.211,0.865,0.822v11.697c0,0.611,0,0.717-0.865,0.822v0.803h2.786
+          		v-0.803c-0.865-0.105-0.865-0.254-0.865-0.822v-11.697c0-0.611,0-0.738,0.865-0.822v-0.803h-2.786V127.757z"/>
+          	<path fill="#7C8372" d="M98.868,126.823v0.803c0.803,0.086,0.803,0.211,0.803,0.824v11.695c0,0.611,0,0.719-0.803,0.824v0.801
+          		h1.731c3.821,0,5.489-2.512,5.489-6.396c0-2.977-1.013-5.109-2.237-6.396C102.395,127.458,100.896,126.823,98.868,126.823z
+          		 M101.043,140.843h-0.316v-12.879c1.098,0.189,4.243,2.365,4.243,7.41C104.97,139.407,102.943,140.843,101.043,140.843z"/>
+          </g>
         </svg>
     </div>
     <div class="col col-4 p-m">
@@ -22,58 +146,64 @@
 
       </div> -->
     </div>
-    <div class="col col-4 p-m">
-      <h4 class="caps bold">Permit</h4>
-      <h3 class="condensed p-s"> #00000 </h3>
+    <div class="col col-4 relative" style="padding-top:38%;">
+      <div class="absolute flex top-0 bottom-0 width-100">
+        <div class="my-auto width-100">
+          <h4 class="caps bold olive p-0 m-0 leading-solid">Permit</h4>
+          <h3 class="h1 condensed p-s olive p-0 m-0 leading-solid"> #00000 </h3>
+        </div>
+      </div>
     </div>
   </div>
   <div class="bg-cream">
-    <div class="cf text-center">
-      <div class="col col-12 s-col-6 p-m">
+    <div class="cf text-left">
+      <div class="col col-12 s-col-6 px-m">
         <h5 class="caps bold">Camper</h5>
-        <p class="border-thin p-s"> test text. </p>
+        <p class="serif h3 border-thin border-olive py-xs px-s"> test text. </p>
       </div>
-      <div class="col col-12 s-col-6 p-m">
+      <div class="col col-12 s-col-6 px-m">
         <h5 class="caps bold">Location</h5>
-        <p class="border-thin p-s"> test text. </p>
+        <p class="serif h3 border-thin border-olive py-xs px-s"> test text. </p>
       </div>
     </div>
-    <div class="p-m">
+    <div class="px-m mb-m">
       <h5 class="caps bold">Destination</h5>
-      <p class="border-thin p-s"> test text. </p>
+      <p class="serif h3 border-thin border-olive py-xs px-s"> test text. </p>
     </div>
 
   <!-- Conditional Campout Link -->
+  <p class="text-left mx-m"><span class="inline-block px-s mr-s border olive">&#x2714;</span>My Campout is open to the community.</p>
+  <a class="block bg-olive py-s mx-m mb-m" href="http://blackriver.cc/"><span class="caps cream">Join My Campout</span></a>
 
   <!-- End Conditional -->
   <div class="text-left serif h3">
-      <div class="p-m">
+      <div class="px-m">
         <h5 class="caps bold"> Experience </h5>
-        <p class="border-bottom-thin">
+        <p class="border-thin border-olive py-xs px-s">
           test
         </p>
       </div>
-      <div class="p-m">
+      <div class="px-m">
         <h5 class="caps bold"> Bicycle </h5>
-        <p class="border-bottom-thin">
+        <p class="border-thin border-olive py-xs px-s">
           test
         </p>
       </div>
-      <div class="p-m">
+      <div class="px-m">
         <h5 class="caps bold"> Bike Camping Is </h5>
-        <p class="border-bottom-thin">
+        <p class="border-thin border-olive py-xs px-s">
           test
         </p>
       </div>
-      <div class="p-m">
+      <div class="px-m">
         <h5 class="caps bold"> Bucket List Destination </h5>
-        <p class="border-bottom-thin">
+        <p class="border-thin border-olive py-xs px-s">
           test
         </p>
       </div>
-      <div class="p-m">
+      <div class="px-m pb-m">
         <h5 class="caps bold"> Strangest Thing Seen Riding </h5>
-        <p class="border-bottom-thin">
+        <p class="border-thin border-olive py-xs px-s">
           test
         </p>
       </div>
