--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer class="text-center py-xxl brown">
+<footer class="text-center py-xxl brown" style="background:linear-gradient(0deg, #d57427, #f0f2db)">
   <h1 class="type-grow stormy caps py-xl">Happy Trails!</h1>
-  <h2 class="h3 caps bold">A <a href="http://builtbyswift.com">Swift Industries</a> Production</h2>
+  <h2 class="h3 caps bold mb-xl">A <a href="http://builtbyswift.com">Swift Industries</a> Production</h2>
   <p class="bold">
     <a href="/faq">F.A.Q.</a>
     <a href="/disclaimer">Blanket Disclaimer</a>
