--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="fixed z4 p-m" style="width:10em;">
+  <div class="fixed z4 p-s" style="width:7em;">
     <svg viewBox="0 0 500 300" fill="currentColor">
       <path d="M35.235,225.05c4.203,7.608,9.364,17.685,9.364,26.161c0,8.814-5.872,13.742-12.525,13.742
   					c-2.365,0-5.078-0.982-6.795-2.015l-1.537,0.963h-2.27l-1.219-9.646l2.814-1.053c1.526,3.542,3.488,7.528,9.007,7.528
@@ -88,20 +88,22 @@
   					c0,0,7.709,3.304,9.902,5.406C416.186,160.249,424.724,170.885,436.996,173.643z"></path>
     </svg>
   </div>
-  <div class="fixed z4 menu-toggle m-l right-0 border border-brown bg-cream">
+  <div class="fixed z4 menu-toggle m-m p-0 right-0 border-thin border-brown bg-cream">
     <div class="col">
-      <a href="#" class="inline-block py-s px-m bold caps h6 bg-brown"><span class="cream">Sign up</span></a>
+      <a href="#signup" class="leading-solid inline-block py-s px-s bold caps h6 bg-brown">
+        <span class="inline-block cream py-xs">Sign up</span>
+      </a>
     </div>
-    <div class="col">
-      <a href="#" class="inline-block pt-s px-s bold caps h6">
-          <svg  class="block" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <!-- <div class="col">
+      <a href="#" class="leading-text inline-block pt-xs px-s bold caps h6">
+          <svg class="block" style="transform:translateY(2px);" fill="#000000" height="24" width="24" viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg">
               <path d="M0 0h24v24H0z" fill="none"/>
               <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
           </svg>
       </a>
-    </div>
+    </div> -->
   </div>
-  <nav class="fixed z4 right-0 my-l px-l" style="top:50%; transform:translateY(-50%);">
+  <nav id="campout-nav" class="fixed z4 my-l px-l" style="top:50%; transform:translateY(-50%);">
     <ul class="list-reset text-right bold">
       <li><a class="block py-s" href="#cover"> Intro </a> </li>
       <li><a class="block py-s" href="#hello"> Hello </a> </li>
