--- a/_sass/elements/_links.scss
+++ b/_sass/elements/_links.scss
@@ -42,8 +42,8 @@ a:active {
   text-decoration-skip: ink;
 }
 a.button{
-  background-color:$black90;
-  color:$white;
+  //background-color:$black90;
+  //color:$white;
   text-decoration:none;
   padding:$space-m $space-l;
   border:none;
@@ -51,7 +51,7 @@ a.button{
   letter-spacing:.1em;
   font-weight:600;
   font-size:.875rem;
-  border-radius:1.5rem;
+  border-radius:2rem;
 }
 a.btn-big{
     padding:$space-m $space-l;
