--- a/_sass/layout/_borders.scss
+++ b/_sass/layout/_borders.scss
@@ -1,10 +1,10 @@
 /* Basscss Border */
 
-$border-width: .2rem;
+$border-width: 2px;
 $border-width-hover: .4rem;
-$border-width-thin: .05rem;
+$border-width-thin: 1px;
 $border-width-thick: .5rem;
-$border-radius: .5em;
+$border-radius: 1em;
 
 
 .border{
