--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -24,6 +24,10 @@
   .s-hide { display: none !important }
 }
 
+@media (min-width: 32em) {
+  .m-hide { display: none !important }
+}
+
 @media (min-width: 32em) and (max-width: 48em) {
   .s-m-hide { display: none !important }
 }
@@ -230,6 +234,8 @@ $width-xxxl: 128rem;
 .height-75 {height:75vh;}
 .height-50 {height:50vh;}
 .height-25 {height:25vh;}
+
+.fill-height{height:100%;}
 
 .height-1-3{height:33.3333333vh;}
 .height-2-3{height:66.6666666vh;}
