--- a/_sass/typography/_typography.scss
+++ b/_sass/typography/_typography.scss
@@ -7,7 +7,7 @@
     font-style: normal;
 }
 
-$sans-font-family: "Futura PT", Avenir, -apple-system, BlinkMacSystemFont,
+$sans-font-family: "futura-pt-bold", Avenir, -apple-system, BlinkMacSystemFont,
   "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
   "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif ;
 $serif-font-family: 'freight-text-pro', Athelas, Palatino, Garamond, Georgia, Cambria, "Times New Roman", Times, serif;
@@ -18,7 +18,7 @@ $monospace-font-family: 'Input Mono Nar Reg', Roboto Mono, Source Code Pro, SFMo
                       'dejavu sans mono', 'liberation mono', 'ubuntu mono', /* linux */
                       monaco, 'courier new', /* older systems */
                       monospace; /* fallback */
-$condensed-font-family: 'alternate-gothic-no-1-d', "Roboto Condensed", "Roboto", -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+$condensed-font-family: 'futura-pt-condensed', "Roboto Condensed", "Roboto", -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
 
 $heading-font-family: $sans-font-family;
 
@@ -67,6 +67,12 @@ $h4: 1rem;    // 16px
 $h5: .875rem; // 14px
 $h6: .75rem;  // 12px
 $small-font-size: .875rem;
+
+
+
+
+
+
 
 // Line Height, Maybe lh as class
 $leading-solid: 1;
