--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,8 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="{{site.baseurl}}/js/jquery.steps.min.js"></script>
+  <script src="{{site.baseurl}}/js/wow.min.js"></script>
+  <script>
+   new WOW().init();
+  </script>
 </head>
