Uploading Product Content

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -142,9 +142,7 @@
         </svg>
     </div>
     <div class="col col-4 p-m">
-      <!-- <div class="circle mx-auto border-brown shadow" style="width:4rem; height:4rem; border:1rem solid;">
-
-      </div> -->
+      <!-- Leave Space here for Tag Circle Dot Area -->
     </div>
     <div class="col col-4 relative" style="padding-top:38%;">
       <div class="absolute flex top-0 bottom-0 width-100">
