--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -91,5 +91,6 @@ dl, dd, ol, ul, figure {
   "typography/typography",
   "elements/elements",
   "animation/animation",
-  "animation/lory"
+  "animation/slick-theme",
+  "animation/slick"
 ;
