--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,7 @@
   <script src="https://use.typekit.net/frh7reh.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
   <script src="{{site.baseurl}}/js/jquery.steps.min.js"></script>
   <script src="{{site.baseurl}}/js/wow.min.js"></script>
   <script>
