--- a/_includes/form.html
+++ b/_includes/form.html
@@ -2,7 +2,7 @@
 <form id="new-camper-form" action="#">
   <div>
     <h3>Profile</h3>
-    <section>
+    <section class="bg-cream cf max-width-m mx-auto">
       <label for="username">Username</label>
       <input id="username" type="text">
       <label for="email">Email</label>
@@ -15,7 +15,7 @@
       <input id="yeah" type="radio"><label for="yeah">Heck Yeah, I'm a bike camper exraordinairre!</label>
       <p>(*) Mandatory</p>
     </section>
-    <h3>Connect</h3>
+    <!-- <h3>Connect</h3>
     <section>
       <label for="campout-location">Where are you going for Swift Campout?</label>
       <input id="campout-location" type="text">
@@ -38,7 +38,7 @@
       <label for="one-word-bikepacking">Use one word to describe bike camping</label>
       <input id="one-word-bikepacking" type="text">
     </section>
-  </div>
+  </div> -->
 </form>
 
 <script>
