New Images, Content Fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -98,9 +98,9 @@
   <nav id="campout-nav" class="fixed z4 my-l px-l" style="top:50%; transform:translateY(-50%);">
     <ul class="list-reset text-right bold">
       <li><a class="block py-s" href="#cover"> Intro </a> </li>
-      <li><a class="block py-s" href="#hello"> Hello </a> </li>
+      <li><a class="block py-s" href="#where"> Where </a> </li>
       <li><a class="block py-s" href="#signup"> Signup </a></li>
-      <li><a class="block py-s" href="#plan"> Plan </a> </li>
+      <!-- <li><a class="block py-s" href="#plan"> Plan </a> </li> -->
       <li><a class="block py-s" href="#share"> Share </a>  </li>
       <li><a class="block py-s" href="#pack"> Pack </a></li>
       <li><a class="block py-s" href="#sponsors"> Sponsors </a></li>
