--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,6 @@
   <h1 class="type-grow stormy caps py-xl">Happy Trails!</h1>
   <h2 class="h3 caps bold mb-xl">A <a href="http://builtbyswift.com">Swift Industries</a> Production</h2>
   <p class="bold">
-    <a href="/faq">F.A.Q.</a>
-    <a href="/disclaimer">Blanket Disclaimer</a>
-    <a href="mailto:info@builtbyswift.com">info@builtbyswift.com</a>
+    <a href="mailto:swiftcampout@builtbyswift.com">swiftcampout@builtbyswift.com</a>
   </p>
 </footer>
