Updated Form & Layouts

--- a/css/main.scss
+++ b/css/main.scss
@@ -37,7 +37,7 @@ visibility: visible;
 }
 
 
-.pill-l.active, .pill-r.active, .button.active{
+.pill-l.active, .pill-r.active, .pill.active, .button.active{
   background-color:$brown;
   color:$cream;
 }
