--- a/_sass/layout/_positioning.scss
+++ b/_sass/layout/_positioning.scss
@@ -8,6 +8,10 @@
 .z2 { z-index:2}
 .z3 { z-index:3}
 .z4 { z-index:4}
+.zn1 { z-index:-1}
+.zn2 { z-index:-2}
+.zn3 { z-index:-3}
+.zn4 { z-index:-4}
 
 //XY Coordinates
 .top-0  { top:0}
